tests/ts_syntax/ts_syntax.exp
Error ---------------------------------------------------------------------------------------------------- never.js:1:10

The closest equivalent of TypeScript's `never` type in Flow is `empty`. [ts-syntax]

   1| type T = never; // ERROR
               ^^^^^


Error -------------------------------------------------------------------------------------------------- unknown.js:1:10

The equivalent of TypeScript's `unknown` type in Flow is `mixed`. [ts-syntax]

   1| type T = unknown; // ERROR
               ^^^^^^^


Error -------------------------------------------------------------------------------------------------- unknown.js:3:10

The equivalent of TypeScript's `unknown` type in Flow is `mixed`. [ts-syntax]

   3| const x: unknown = 1; // ERROR
               ^^^^^^^



Found 3 errors
